# aeon_sleap_processing

./: .gitignore  LICENSE  README.md  pyproject.toml
.bonsai/: Bonsai.config
Workflows/: Extensions.csproj  MatchQuadIDToTopCamPose_confidence.bonsai
Workflows/Extensions/: ApplyTransformPose.cs  CombineModels.cs  CombineTopAndQuadIds.cs  FilterPosesByConfidence.cs  FindHighestConfidencePose.cs  FindHighestConfidencePoseFallback.cs  PredictPoses.bonsai  TransformPose.bonsai
aeon_sleap_processing/: __init__.py
bonsai/: Bonsai.config  Bonsai.exe.settings
id_model/: README.md
id_model/step1_mapping/: README.md  quad_to_top_cam_mapping.ipynb
id_model/step2_composite_videos/: README.md  generate_composite_quadrant_videos.py  generate_composite_quadrant_videos.sh
id_model/step3_SLEAP_labelling/: README.md  composite_video_sleap_labelling_and_evaluating.ipynb
id_model/step4_SLEAP_training/: README.md
id_model/step4_SLEAP_training/centered_instance_model/: README.md  best_trial.py  (+5 more)
id_model/step5_SLEAP_evaluation/: README.md  sleap_predict.sh
pose_id_combine/: README.md
pose_id_combine/step1_generating_SLEAP_predictions/: README.md  bonsai_sleap_automated.py  bonsai_sleap_validate.ipynb
pose_id_combine/step2_combining_SLEAP_predictions/: README.md  combine_pose_id_automated.py  combine_pose_id_chunk.py
pose_model/: README.md
pose_model/AEON_multi_point_topdown_top.centered_instance/: initial_config.json  labels_gt.test.slp  labels_gt.train.slp  labels_gt.val.slp  labels_pr.test.slp  labels_pr.train.slp  labels_pr.val.slp  metrics.test.npz  metrics.train.npz  metrics.val.npz  training_config.json  training_log.csv
pose_model/AEON_multi_point_topdown_top.centroid/: initial_config.json  labels_gt.test.slp  labels_gt.train.slp  labels_gt.val.slp  labels_pr.test.slp  labels_pr.train.slp  labels_pr.val.slp  metrics.test.npz  metrics.train.npz  metrics.val.npz  training_config.json  training_log.csv
social_behavior_detection/: README.md  detect_fights.py  detect_fights_all_epochs.py  detect_tube_tests.py  detect_tube_tests_all_epochs.py  fight_detection_logic.md  social_behaviour_detection.py  tube_test_detection_logic.md
top_cam_id/bonsai_sleap_top_cam/: bonsai_sleap_automated_individual_sessions.py  bonsai_sleap_automated_social_sessions.py  full_pose_id_inference_bonsai.sh  full_pose_id_inference_bonsai_individual_sessions.sh
top_cam_id/composite_video_creation/: make_composite_vid.slurm  pixel_mapping.ipynb
top_cam_id/sleap_training/: aeon_sleap_label.ipynb  sleap_optuna_train.py
(+21 files in other folders)
